--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </div>
   <div class="image-wrapper">
     <img src="img/STR-Rocket.png" alt="Image 3" class="bottom-right resizable">
-    <span class="image-text">Strom Trooper</span>
+    <span class="image-text">Tropper</span>
   </div>
 </div>
 
