--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <img src="/img/RAID.gif" alt="March GIF" class="march-gif">
       <p>SOCIAL :</p>
       <div class="image-container">
-        <a href="CommingSoon.html" target="_blank"><img src="/img/chart.png" alt="DexScreener" class="popup-image"></a>
+        <a href="https://www.pump.fun/9n4vC1797R3ydnZ1rCUuM4tBiBBFeJ6g2aF3rhCrWeYL" target="_blank"><img src="/img/chart.png" alt="DexScreener" class="popup-image"></a>
         <a href="https://t.me/Lego_sol_werz_portal" target="_blank"><img src="/img/Telegram-Logo.png" alt="Telegram" class="popup-image"></a>
         <a href="https://twitter.com/Legosolwerz" target="_blank"><img src="/img/X-Logo.png" alt="Twitter" class="popup-image"></a>
       </div>
