--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   
   <div class="content">
     <div class="starwarsday-container">
-      <img src="img/Starwarsday.png" alt="Starwarsday" class="starwarsday">
+      <img src="" class="starwarsday">
     </div>
     <div class="gif-container">
       <div class="salute-container">
