--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="salute-container">
         <img src="img/Salute.gif" alt="Salute GIF" class="salute-gif">
         <p>CA : 9n4vC1797R3ydnZ1rCUuM4tBiBBFeJ6g2aF3rhCrWeYL</p>
-        <button class="join-button" onclick="openPopup()">Join the Army</button>
+        <button class="join-button" onclick="openPopup()">Join De Clons</button>
       </div>
 
       
@@ -57,7 +57,6 @@
   </div>
 
 
-  
 
   <div id="overlay" class="overlay" style="display: flex;flex-direction: column;">
     <img src="img/Logo.png" alt="Flying Ship" class="overlay-logo">
