--- a/index.html
+++ b/index.html
@@ -27,12 +27,10 @@
   <div id="popup" class="popup">
     <div class="popup-content">
       <span class="close" onclick="closePopup()">&times;</span>
-      <img src="/img/RAID.gif" alt="March GIF" class="march-gif">
-      <p>SOCIAL :</p>
+      
+      <p>COMMING SOON</p>
       <div class="image-container">
-        <a href="https://www.pump.fun/9n4vC1797R3ydnZ1rCUuM4tBiBBFeJ6g2aF3rhCrWeYL" target="_blank"><img src="/img/chart.png" alt="DexScreener" class="popup-image"></a>
-        <a href="https://t.me/Lego_sol_werz_portal" target="_blank"><img src="/img/Telegram-Logo.png" alt="Telegram" class="popup-image"></a>
-        <a href="https://twitter.com/Legosolwerz" target="_blank"><img src="/img/X-Logo.png" alt="Twitter" class="popup-image"></a>
+
       </div>
     </div>
   </div>
@@ -45,8 +43,16 @@
           <div class="salute-container">
             <img src="/img/Logo.png" alt="Logo" class="logo">
             <img src="img/Salute.gif" alt="Salute GIF" class="salute-gif">
-            <p>CA : 9n4vC1797R3ydnZ1rCUuM4tBiBBFeJ6g2aF3rhCrWeYL</p>
-            <button class="join-button" onclick="openPopup()">Join De CLONS</button>
+            <p>Buy $LSW and join the empire to take over the solana system.</p>
+            <p2>CA: 9n4vC1797R3ydnZ1rCUuM4tBiBBFeJ6g2aF3rhCrWeYL</p2>
+            
+            <div class="image-container">
+              <a href="https://dexscreener.com/solana/3pybwlvgfqtxc1ccoexr3uxdgcdzbdirshbvsszabtwd" target="_blank"><img src="/img/chart.png" alt="DexScreener" class="popup-image"></a>
+              <a href="https://t.me/Lego_sol_werz_portal" target="_blank"><img src="/img/Telegram-Logo.png" alt="Telegram" class="popup-image"></a>
+              <a href="https://twitter.com/Legosolwerz" target="_blank"><img src="/img/X-Logo.png" alt="Twitter" class="popup-image"></a>
+            </div>
+            <button class="join-button" onclick="window.open('https://jup.ag/swap/SOL-9n4vC1797R3ydnZ1rCUuM4tBiBBFeJ6g2aF3rhCrWeYL', '_blank')">Buy $LSW</button>
+            <button class="join-button" onclick="openPopup()">🏆CoMOONity Archivement🏆</button>
           </div>
         </div>
       </div>
@@ -88,7 +94,7 @@
   </div>
   <div class="image-wrapper">
     <img src="img/STR-Rocket.png" alt="Image 3" class="bottom-right resizable">
-    <span class="image-text">Tropper</span>
+    <span class="image-text">Pump Tropper</span>
   </div>
 </div>
 
