--- a/index.html
+++ b/index.html
@@ -53,12 +53,16 @@
             </div>
             <button class="join-button" onclick="window.open('https://jup.ag/swap/SOL-9n4vC1797R3ydnZ1rCUuM4tBiBBFeJ6g2aF3rhCrWeYL', '_blank')">Buy $LSW</button>
             <button class="join-button" onclick="openPopup()">🏆CoMOONity Archivement🏆</button>
+            <button class="more-button" onclick="openSecondContent()">More...</button>
           </div>
         </div>
       </div>
       <div class="content second-content">
         <!-- Second content section -->
         <h2>Comming Soon</h2>
+        <h2>Comming Soon</h2>
+        <h2>Comming Soon</h2>
+        <button class="more-button" onclick="openFirstContent()">Back</button>
         <p> </p>
         
       </div>
