--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <a href="https://twitter.com/Legosolwerz" target="_blank"><img src="/img/X-Logo.png" alt="Twitter" class="popup-image"></a>
             </div>
             <button class="join-button" onclick="window.open('https://jup.ag/swap/SOL-9n4vC1797R3ydnZ1rCUuM4tBiBBFeJ6g2aF3rhCrWeYL', '_blank')">Buy $LSW</button>
-            <button class="join-button" onclick="openPopup()">🏆CoMOONity Archivement🏆</button>
+           <!--  <button class="join-button" onclick="openPopup()">🏆CoMOONity Archivement🏆</button> -->
             <button class="more-button" onclick="openSecondContent()">More...</button>
           </div>
         </div>
